# codexcomp

./: CLAUDE.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  run.py  test_fold.py  test_ws.py
codexcomp/: __init__.py  cli.py  fold.py  server.py  service.py
guard/: cli.py  fold.py  server.py  service.py
systemd/: codex-516-guard.service.example
