[project]
name = "codexcomp"
version = "0.3.3"
description = "Local Responses proxy for OpenAI Codex CLI: folds gpt-5.5 518n-2 reasoning truncation (516 degradation) via the official openai_base_url wiring — no provider change, WebSocket-first, no fallback noise."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "dzshzx" }]
requires-python = ">=3.12"
keywords = ["codex", "openai", "proxy", "reasoning", "516", "gpt-5.5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "starlette>=0.41",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "zstandard>=0.23",
]

[project.urls]
Homepage = "https://github.com/dzshzx/codexcomp"
Repository = "https://github.com/dzshzx/codexcomp"
Issues = "https://github.com/dzshzx/codexcomp/issues"

[project.scripts]
codexcomp = "codexcomp.cli:main"

# Windowless launcher (GUI subsystem on Windows → no console window at logon).
# Use it as the target of a manually-created Startup shortcut on Windows.
[project.gui-scripts]
codexcompw = "codexcomp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codexcomp"]
